--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 .controls .controls__btns {
     margin-bottom : 30px;
 }
-.controls__btns button {
+/*.controls__btns button {
     all: unset;
     cursor: pointer;
     background-color: white;
@@ -40,6 +40,13 @@ body {
     box-shadow: 0 4px 6px rgba(50,50,90, 0.11), 0 1px 3px rgba(0,0,0,0.00);
     border: 2px solid rgba(0,0,0, 0.2);
     color: rgba(0,0,0,0.7);
+}*/
+i {
+    font-size: 30px;
+    width: 80px;
+    text-align: center;
+    color: #2b2b2b;
+    cursor: pointer;
 }
 .controls .controls__colors {
     display: flex;
